Nav Spacing and Fadeout Timing Fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,7 @@ img{
 .nav{
     height: var(--header-height);
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 @media screen and (max-width: 768px){
